Table events {
id uuid [pk]
title text
description text
image_url text
capacity int
metadata jsonb
created_at timestamp
}

Table artists {
id uuid [pk]
name text
}

Table event_artists {
event_id uuid [ref: > events.id]
artist_id uuid [ref: > artists.id]

indexes {
(event_id, artist_id) [unique]
}
}

Table lotes {
id uuid [pk]
event_id uuid [ref: > events.id]
name text
price int
total int
reserved int [default: 0]
position int
created_at timestamp

indexes {
(event_id)
(event_id, position)
}
}

Table orders {
id uuid [pk]
event_id uuid [ref: > events.id]
status text
ticket_quantity int
expires_at timestamp
payment_id text
created_at timestamp

indexes {
(event_id)
(status)
(payment_id)
}
}

Table tickets {
id uuid [pk]
event_id uuid [ref: > events.id]
order_id uuid [ref: > orders.id]
name text
email text
created_at timestamp

indexes {
(event_id)
(order_id)
}
}
